<?xml version="1.0" encoding="utf-8"?>

<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.AddReminderActivity">

    <include
        android:id="@+id/llHeader"
        layout="@layout/layout_header" />


    <EditText
        android:id="@+id/edtName"
        android:layout_width="match_parent"
        android:layout_height="@dimen/_45sdp"
        android:layout_marginStart="20dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="20dp"
        android:background="@drawable/ratangel_orng"
        android:digits="abcdefghijklmnopqrstuvwxyzABCDEFGHIJKLMNOPQRSTUVWXYZ "
        android:drawablePadding="@dimen/_10sdp"
        android:hint="@string/name"
        android:inputType="textCapSentences"
        android:maxLength="36"
        android:maxLines="1"
        android:paddingStart="@dimen/_10sdp"
        android:paddingEnd="@dimen/_10sdp"
        android:singleLine="true"
        android:textColor="@color/eigengrau"
        android:textColorHint="@color/dark_gray_text1"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/llHeader" />

    <EditText
        android:id="@+id/edtDesciption"
        android:layout_width="match_parent"
        android:layout_height="@dimen/_100sdp"
        android:layout_marginStart="20dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="20dp"
        android:background="@drawable/ratangel_orng"
        android:drawablePadding="@dimen/_10sdp"
        android:gravity="top|start"
        android:hint="@string/desciption"
        android:inputType="textCapSentences"
        android:maxLength="36"
        android:maxLines="1"
        android:padding="@dimen/_10sdp"
        android:paddingStart="@dimen/_10sdp"
        android:paddingEnd="@dimen/_10sdp"
        android:singleLine="true"
        android:textColor="@color/eigengrau"
        android:textColorHint="@color/dark_gray_text1"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/edtName" />

    <EditText
        android:id="@+id/edtDateTime"
        android:layout_width="match_parent"
        android:layout_height="@dimen/_45sdp"
        android:layout_marginStart="20dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="20dp"
        android:background="@drawable/ratangel_orng"
        android:drawablePadding="@dimen/_10sdp"
        android:hint="@string/Datetime"
        android:focusable="false"
        android:inputType="datetime"
        android:maxLength="36"
        android:maxLines="1"
        android:paddingStart="@dimen/_10sdp"
        android:paddingEnd="@dimen/_10sdp"
        android:singleLine="true"
        android:textColor="@color/eigengrau"
        android:textColorHint="@color/dark_gray_text1"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/edtDesciption" />
    <EditText
        android:id="@+id/edtTime"
        android:layout_width="match_parent"
        android:layout_height="@dimen/_45sdp"
        android:layout_marginStart="20dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="20dp"
        android:focusable="false"
        android:background="@drawable/ratangel_orng"
        android:drawablePadding="@dimen/_10sdp"
        android:hint="@string/Time"
        android:inputType="datetime"
        android:maxLength="36"
        android:maxLines="1"
        android:paddingStart="@dimen/_10sdp"
        android:paddingEnd="@dimen/_10sdp"
        android:singleLine="true"
        android:textColor="@color/eigengrau"
        android:textColorHint="@color/dark_gray_text1"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/edtDateTime" />


    <RelativeLayout
        android:id="@+id/btnSubmit"
        android:layout_width="match_parent"
        android:layout_height="@dimen/_40sdp"
        android:layout_marginStart="20dp"
        android:layout_marginTop="30dp"
        android:layout_marginEnd="20dp"
        android:background="@drawable/border_fill_color_ornge"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/edtTime">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:gravity="center"
            android:paddingTop="@dimen/_2sdp"
            android:text="@string/submit"
            android:textColor="@color/white"
            android:textSize="@dimen/_14ssp" />
    </RelativeLayout>

</androidx.constraintlayout.widget.ConstraintLayout>

